style.css
body, a{
  background:#1F1A1C;
  color:#AA8B53;
}

a:visited{
  color:#ab9979;
}

h2{
  color:#5A4B35;
}

/**classes**/

.center{
  position:absolute;
  top:50%;
  left:50%;
  transform:translate(-50%,-50%);
}

.rightbar{
  position:absolute;
  top:0px;
  left:75%;
  right:2%
}

/** a small example of flexbox **/
.flexbox{
  display:flex;/** this line makes the whole element flexbox **/
  flex-direction:column; /** makes it go down **/
  justify-content:center; /**centers the code**/
  align-content:center;
}

.flexbox>*{
  border-style:solid;
  border-radius:5px;
  border-color:#5A4B35;
}

